--- a/pages/login.html
+++ b/pages/login.html
@@ -16,8 +16,6 @@
     <link rel="stylesheet" href="../css/login/login-formulario.css">
     <link rel="stylesheet" href="../css/login/login-link.css">
 
-    <script src="https://kit.fontawesome.com/462b84aad5.js" crossorigin="anonymous"></script>
-
     <title>Login</title>
 </head>
 
@@ -30,39 +28,17 @@
             </a>
             <span>ou utilize sua conta</span>
             <form class="login__formulario" action="../index.html">
-                <input class="login__formulario--campo" type="email" placeholder="Email" required>
-                <input class="login__formulario--campo" type="password" placeholder="Senha" required>
-                <button class="login__formulario--botao">Logar</button>
+                <input class="login__formulario--email sm-form" type="email" placeholder="Email" required>
+                <input class="login__formulario--senha sm-form" type="password" placeholder="Senha" required>
+                <button class="login__formulario--botao sm-button">Logar</button>
             </form>
-            <a class="login__link link" href="#">Esqueceu a senha?</a>
-            <p class="login__link">Não tem conta? <a class="link" href="#">Registre-se</a></p>
+            <a class="login__link link" href="../pages/recovery.html">Esqueceu a senha?</a>
+            <p class="login__link">Não tem conta? <a class="link" href="../pages/register.html">Registre-se</a></p>
         </section>
     </main>
-    <script type="module">
-        // Import the functions you need from the SDKs you need
-        import { initializeApp } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-app.js";
-        import { getAuth } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-auth.js";
-        import { getAnalytics } from "https://www.gstatic.com/firebasejs/9.12.1/firebase-analytics.js";
-        // TODO: Add SDKs for Firebase products that you want to use
-        // https://firebase.google.com/docs/web/setup#available-libraries
-
-        // Your web app's Firebase configuration
-        // For Firebase JS SDK v7.20.0 and later, measurementId is optional
-        const firebaseConfig = {
-            apiKey: "AIzaSyA5pcKIkutqoSqTd4Th3-lBID0wNTF4krM",
-            authDomain: "todo-8771f.firebaseapp.com",
-            projectId: "todo-8771f",
-            storageBucket: "todo-8771f.appspot.com",
-            messagingSenderId: "1007205191926",
-            appId: "1:1007205191926:web:281b7094fa211960841cd7",
-            measurementId: "G-9FKG66217Z"
-        };
-
-        // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const analytics = getAnalytics(app);
-    </script>
+    <script src="../js/firebase.js" type="module"></script>
     <script src="../js/login.js" type="module"></script>
+    <script src="https://kit.fontawesome.com/462b84aad5.js" crossorigin="anonymous"></script>
 </body>
 
 </html>
