--- a/pages/register.html
+++ b/pages/register.html
@@ -30,7 +30,7 @@
                     required>
                 <button class="register__formulario--botao sm-button">Registrar-se</button>
             </form>
-            <p class="register__link">Já possui uma conta? <a class="link" href="../pages/recovery.html">Entrar</a></p>
+            <p class="register__link">Já possui uma conta? <a class="link" href="../pages/login.html">Entrar</a></p>
         </section>
     </main>
     <script src="../js/firebase.js" type="module"></script>
